GNOME Bugzilla – Bug 724742
GtkRevealer not allocating enough space
Last modified: 2014-02-20 01:20:21 UTC
Created attachment 269717 [details] [review] Patch to Revealer that helps After I ported Boxes to use GtkRevealer to reveal the sidebar in properties/wizard views instead of a custom ClutterActor, the sidebar shrank even though I set vexpand=true on all relevant widgets. The boxes change is here: https://git.gnome.org/browse/gnome-boxes/log/?h=wip/less-actors2 (The one titled "sidebar: Derive from Gtk.Revealer"). Benjamin provided the attached patch to see if it helps and it does.
Created attachment 269718 [details] Screenshot of the issue in Boxes
Turns out that the attached patch at least breaks the actionbar in selection mode that is revealed from bottom to upwards. The buttons on the actionbar are missing with this patch and its just an empty bar. Without the patch, its fine.
commit 118969e70a548c9b8f5b54d664aea7f4415e3fc5 Author: Benjamin Otte <otte@redhat.com> Date: Thu Feb 20 01:47:21 2014 +0100 reftests: Add a reftest for the latest fix https://bugzilla.gnome.org/show_bug.cgi?id=724742 commit b9e37f8d2d4d14d3cb23f56a795fcdd2e6128e88 Author: Benjamin Otte <otte@redhat.com> Date: Wed Feb 19 21:15:25 2014 +0100 revealer: Allocate extra size to child Do not constrain the child widget to its preferred size when the revealer is larger. https://bugzilla.gnome.org/show_bug.cgi?id=724742